fix sonarlint findings
Signed-off-by: Michael Bädorf <tailoringexpert@michael-baedorf.de>